resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeroom
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: homeroom
  template:
    metadata:
      labels:
        deployment: homeroom
    spec:
      serviceAccountName: homeroom
      containers:
      - name: spawner
        image: quay.io/openshifthomeroom/workshop-homeroom:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /opt/app-root/configs
          name: configs
      volumes:
      - name: configs
        configMap:
          defaultMode: 420
          name: homeroom-configs
