resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeroom
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: homeroom
