resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homeroom
  annotations:
    homeroom/index: $(HOMEROOM_NAME)
spec:
rules:
- host: homeroom.$(CLUSTER_SUBDOMAIN)
http:
paths:
- path: "/"
backend:
serviceName: homeroom
servicePort: 8080
